--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "TG Rename Bot",
-  "description": "Telegram's best Open Source Rename Bot. Create your Fork now.",
+  "name": "  Rename AI Bot",
+  "description": "Telegram's best Open Source Rename Bot .",
   "keywords": [
     "telegram",
     "best",
@@ -8,9 +8,9 @@
     "source",
     "Rename"
   ],
-  "success_url": "https://github.com/spechide/AnyDLbot",
-  "website": "https://githib.com/prgofficial",
-  "repository": "https://github.com/prgofficial/RenameBot-PermTB",
+  "success_url": "https://github.com/zmraj/RenameBoT.git",
+  "website": "https://github.com/zmraj/RenameBoT.git",
+  "repository": "https://github.com/zmraj/RenameBoT.git",
   "env": {
     "WEBHOOK": {
       "description": "Setting this to ANYTHING will enable webhooks when in env mode",
